# fsga

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  publish-pypi.yml  test.yml
configs/: default.yaml  high_dimensional.yaml  production.yaml  quick_test.yaml
docs/: README.md  index.md
docs/about/: project-plan.md
docs/getting-started/: installation.md  quickstart.md  tutorial.md
docs/stylesheets/: extra.css
docs/user-guide/: architecture.md
experiments/: README.md  run_comparison.py  run_experiment.py
fsga/analysis/: README.md  __init__.py  baselines.py  experiment_runner.py
fsga/core/: README.md  README_DEV.md  genetic_algorithm.py  population.py
fsga/datasets/: README.md  loader.py
fsga/evaluators/: README.md  accuracy_evaluator.py  balanced_accuracy_evaluator.py  evaluator.py  f1_evaluator.py
fsga/ml/: README.md  models.py
fsga/mutations/: README.md  bitflip_mutation.py  mutation.py
fsga/operators/: README.md  crossover.py  multi_point_crossover.py  single_point_crossover.py  two_point_crossover.py  uniform_crossover.py
fsga/selectors/: README.md  elitism_selector.py  ranking_selector.py  roulette_selector.py  selector.py  tournament_selector.py
fsga/utils/: README.md  config.py  logging.py  metrics.py  serialization.py
fsga/visualization/: README.md  __init__.py  plots.py
tests/: conftest.py  test_crossover_operators.py  test_datasets.py  test_edge_cases.py  test_evaluator_operators.py  test_evaluators.py  test_genetic_algorithm.py  test_integration.py  test_ml.py  test_mutations.py  test_operators.py  test_population.py  test_selector_operators.py  test_selectors.py  test_utils.py
