[project]
name = "fsga"
version = "0.1.0"
description = "Feature Selection via Genetic Algorithm - ML framework for optimal feature subset discovery"
readme = "README.md"

authors = [{name = "Piotr Krzysztof", email = "piotr@codextechnologies.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["genetic-algorithm", "feature-selection", "machine-learning", "optimization", "evolutionary-computation"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
    "black>=25.11.0",
]
viz = [
    "plotly>=6.4.0",
    "ipywidgets>=8.1.8",
]
ml = [
    "xgboost>=3.1.1",
    "lightgbm>=4.6.0",
]
notebooks = [
    "jupyterlab>=4.4.10",
]
all = [
    "fsga[dev,viz,ml,notebooks]",
]

[project.urls]
Homepage = "https://github.com/zweiss/feature-selection-via-genetic-algorithm"
Documentation = "https://github.com/zweiss/feature-selection-via-genetic-algorithm/blob/main/README.md"
Repository = "https://github.com/zweiss/feature-selection-via-genetic-algorithm"
Issues = "https://github.com/zweiss/feature-selection-via-genetic-algorithm/issues"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fsga*"]
exclude = ["tests*", "docs*", "notebooks*", "experiments*"]

[tool.ruff]
# Exclude commonly ignored directories (from knapsack project)
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 89
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=fsga",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["fsga"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
